--- a/rv-versions-translations/translations/eng/griffith.csv
+++ b/rv-versions-translations/translations/eng/griffith.csv
@@ -5821,7 +5821,7 @@
 07.085.05	May this my song reach Varuṇa and Indra, and, strongly urging, win me sons and offspring. To the Gods' banquet may we go with riches. Preserve us evermore, ye Gods with blessings.
 07.086.01	WISE, verily, are creatures through his greatness who stayed ever, spacious heaven and earth asunder; Who urged the high and mighty sky to motion, the Star of old, and spread the earth before him.
 07.086.02	With mine own heart I commune on the question how Varuṇa and I may be united. What gift of mine will he accept unangered? When may I calmly look and find him gracious?
-07.086.03	"Fain to know this in in I question others: I seek the wise, O Varuṇa, and ask them. This one same answer even the sages gave me, ""Surely this Varuṇa is angry with thee."""
+07.086.03	"Fain to know this in in I question others: I seek the wise, O Varuṇa, and ask them. This one same answer even the sages gave me, "Surely this Varuṇa is angry with thee.""
 07.086.04	What, Varuṇa, hath been my chief transgression, ihat thou wouldst slay the friend who sings thy praises? Tell me, Unconquerable Lord, and quickly sinless will I approach thee with mine homage.
 07.086.05	Free us from sins committed by our fathers, from those wherein we have ourselves offended. O King, loose, like a thief who feeds the cattle, as from the cord a calf, set free Vasishṭha.
 07.086.06	Not our own will betrayed us, but seduction, thoughtlessness, Varuṇa wine, dice, or anger. The old is near to lead astray the younger: even sleep removeth not all evil-doing.
@@ -9410,7 +9410,7 @@
 10.061.05	Membrum suum virile, quod protentum fuerat, mas ille retraxit. Rursus illud quod in juvenem filiam sublatum fuerat, non aggressurus, ad se retrahit.
 10.061.06	Quum jam in medio congressu, semiperfecto opere, amorem in puellam pater impleverat, ambo discedentes seminis paulum in terrae superficie in sacrorum sede effusum emiserunt.
 10.061.07	Quum pater suam filiam adiverat, cum eâ congressus suum semen supra terram effudit. Tum Dii benigni precem (brahma) progenuerunt, et Vastoshpatim, legum sacrarum custodem, formaverunt.
-10.061.08	"Ille tauro similis spumam in certamine jactavit; tunc discedens pusillanimis huc profectus est. Quasi dextro pede claudus processit, ""inutiles fuerunt illi mei complexus,"" ita locutus."
+10.061.08	"Ille tauro similis spumam in certamine jactavit; tunc discedens pusillanimis huc profectus est. Quasi dextro pede claudus processit, "inutiles fuerunt illi mei complexus," ita locutus."
 10.061.09	The fire, burning the people, does not approach quickly (by day): the naked (Rákshasas approach) not Agni by night; the giver of fuel, and the giver of food, he, the upholder (of the rite), is born, overcoming enemies by his might.
 10.061.10	Uttering praise to suit the rite Navagvas came speedily to win the damsel's friendship. They who approached the twice-strong stable's keeper, meedless would milk the rocks that naught had shaken.
 10.061.11	Swift was new friendship with the maid they quickly accepted it as genuine seed and bounty. Milk which the cow Sabardugha had yielded was the bright heritage which to thee they offered.
@@ -9726,8 +9726,8 @@
 10.086.13	Wealthy Vrsakapayi, blest with sons and consorts of thy sons, Indra will eat thy bulls, thy dear oblation that effecteth much. Supreme is Indra over all.
 10.086.14	Fifteen in number, then, for me a score of bullocks they prepare, And I devour the fat thereof: they fill my belly full with food. Supreme is Indra over all.
 10.086.15	Like as a bull with pointed horn, loud bellowing amid the herds, Sweet to thine heart, O Indra, is the brew which she who tends thee pours. Supreme is Indra over all.
-10.086.16	"[Griffith: ""I pass over stanzas 16 and 17, which I cannot translate into decent English.""]"
-10.086.17	"[Griffith: ""I pass over stanzas 16 and 17, which I cannot translate into decent English.""]"
+10.086.16	[Griffith: "I pass over stanzas 16 and 17, which I cannot translate into decent English."]
+10.086.17	[Griffith: "I pass over stanzas 16 and 17, which I cannot translate into decent English."]
 10.086.18	O Indra this Vr̥ishâkapi hath found a slain wild animal, Dresser, and new-made pan, and knife, and wagon with a load of wood. Supreme is Indra over all.
 10.086.19	Distinguishing the Dâsa and the Ârya, viewing all, I go. I look upon the wise, and drink the simple votary's Soma juice. Supreme is Indra over all.
 10.086.20	The desert plains and steep descents, how many leagues in length they spread! Go to the nearest houses, go unto thine home, Vr̥ishâkapi. Supreme is Indra over all.
