--- a/rv-versions-translations/translations/eng/oldenberg.csv
+++ b/rv-versions-translations/translations/eng/oldenberg.csv
@@ -514,7 +514,7 @@
 02.009.02	Be thou our messenger, be our protector far and wide; be thou, O bull, a leader towards greater wealth. O Agni! for the continuation of our children and of ourselves be thou an unremitting, brilliant protector.
 02.009.03	May we worship thee at thy highest birth (-place), O Agni; may we worship thee with praises in thy lower abode. I honour the womb from which thou hast sprung. When thou hast been kindled, they have offered offerings in thee.
 02.009.04	Agni, being the best sacrificer perform thou the sacrifice with the oblation. With thy readiness to hear (us) hail our gift, the wealth (which we offer). For thou art the treasure-lord of treasures; thou art the deviser of brilliant speech.
-02.009.05	"Thy wealth of both kinds 1 never fails, when thou art born (kindled) day by day, ""O wonderful one. Make thy singer, O Agni, rich in food; make him the lord of wealth with excellent offspring."
+02.009.05	Thy wealth of both kinds 1 never fails, when thou art born (kindled) day by day, O wonderful one. Make thy singer, O Agni, rich in food; make him the lord of wealth with excellent offspring.
 02.009.06	With this face of thine, as a bounteous (lord), a sacrificer to the gods, the best performer of sacrifices with happiness, as an undeceivable guardian and far-reaching protector, shine among us, O Agni, with light and wealth.
 02.010.01	Agni is to be invoked as the first like a father, when he has been inflamed by Manus 1 in the abode of Id 2. When he has invested himself with beauty, the wise immortal, he, the glorious strong (horse) is to be smoothed (by the worshippers as by grooms).
 02.010.02	Agni with bright splendour, mayest thou hear my call with all my prayers, thou a wise immortal. The two tawny (horses) draw thy chariot or the two red (horses), or He the wide-ranging one has made the two ruddy (horses draw his chariot) 1.
@@ -649,7 +649,7 @@
 03.011.04	The gods have made Agni, the old-renowned son of strength, the Gâtavedas, their carrier (towards the sacrifice) 1.
 03.011.05	Agni the undeceivable one who goes before the human tribes, he is the quick chariot 1, ever new.
 03.011.06	Overcoming all attacks, He, the uninjured mind (power) of the gods, Agni, is most mightily renowned.
-03.011.07	"Through the vehicle 1 (which carries the gods) towards the delights (of sacrifice), ""the worshipping mortal attains the dwelling-place 2 of (Agni) whose flames are purifying."
+03.011.07	Through the vehicle 1 (which carries the gods) towards the delights (of sacrifice), the worshipping mortal attains the dwelling-place 2 of (Agni) whose flames are purifying.
 03.011.08	May we, the priests, by our prayers obtain all the blissful gifts of Agni Gâtavedas.
 03.011.09	Agni! May we win all the best things in (the trials of) strength. In thee the gods have established them 1.
 03.012.01	Indra-Agni, in consequence of our prayers come hither to the pressed (Soma), to the precious cloud 1. Drink of it incited by our thoughts (i. e. by our prayers).
