--- a/rigveda/translations/rus/elizarenkova.csv
+++ b/rigveda/translations/rus/elizarenkova.csv
@@ -35184,11 +35184,11 @@
 10.061.18	1	Родственный ему богатый покровитель, направляющий на тебя на небе (свою) силу ви́дения,
 10.061.18	2	Набханедиштха исступленно бормочет:
 10.061.18	3	Это наше высшее происхождение, или и его тоже.
-10.061.18	4	E QU	Я был после этого каким-то по счету.
+10.061.18	4	E QU Я был после этого каким-то по счету.
 10.061.19	1	Это мое происхождение. Здесь мое место.
-10.061.19	2	-	Это мои боги. Вот я весь,
-10.061.19	3	-	Дваждырожденный, перворожденный закона.
-10.061.19	4	E QU	Это (все) дала надоить корова при рождении.
+10.061.19	2	Это мои боги. Вот я весь,
+10.061.19	3	Дваждырожденный, перворожденный закона.
+10.061.19	4	E QU Это (все) дала надоить корова при рождении.
 10.061.20	1	Тут среди этих (племен) милый возница (?), ярко сверкающий,
 10.061.20	2	Распрягает (коней), (этот) ездящий по двум путям, побеждающий в древесине.
 10.061.20	3	Когда дитя в доме (становится), как устремленная вверх линия,
@@ -36364,11 +36364,11 @@
 10.086.04	3	Пусть сейчас же схватит его за ухо
 10.086.04	4	Собака, охотящаяся на кабанов!
 10.086.04	5	Индра – выше всего!
-10.086.05	1	-	Мои милые, хорошо слаженные, украшенные (эти самые)
-10.086.05	2	-	Попортила обезьяна.
-10.086.05	3	-	Размозжу-ка я ей голову!
-10.086.05	4	-	Стану злочинцу не на благо!
-10.086.05	5	-	Индра – выше всего!
+10.086.05	1	Мои милые, хорошо слаженные, украшенные (эти самые)
+10.086.05	2	Попортила обезьяна.
+10.086.05	3	Размозжу-ка я ей голову!
+10.086.05	4	Стану злочинцу не на благо!
+10.086.05	5	Индра – выше всего!
 10.086.06	1	Нет женщины с лучшими чреслами, чем у меня!
 10.086.06	2	Не бывает лучше (меня) в любовных объятиях!
 10.086.06	3	Никто лучше меня не прижимается (к мужчине)!
@@ -37018,9 +37018,9 @@
 10.095.03	2	Как бег (коней), способный добыть быков, добыть сотни.
 10.095.03	3	Немужественным был замысел у тех, кто засверкал, словно молния,
 10.095.03	4	(Эти) сотрясатели сумели проблеять, как овца.
-10.095.04	1	-	Она, приносящая свекру богатство
-10.095.04	2	-	(И) жизненную силу, если хочет любовник,
-10.095.04	3	-	Приходила домой из дома напротив (к тому,) кто ей нравился,
+10.095.04	1	Она, приносящая свекру богатство
+10.095.04	2	(И) жизненную силу, если хочет любовник,
+10.095.04	3	Приходила домой из дома напротив (к тому,) кто ей нравился,
 10.095.04	4	E QU	День (и) ночь пронзаемая (его) прутом.
 10.095.05	1	Трижды в день ты пронзал меня прутом
 10.095.05	2	И наполнял (меня), даже когда у меня не было охоты.
@@ -37708,9 +37708,9 @@
 10.108.10	3	Они показались мне жаждущими коров, когда я уходила.
 10.108.10	4	Подальше убирайтесь прочь отсюда, Пани!
 10.108.11	1	Убирайтесь, Пани, как можно дальше!
-10.108.11	2	-	Пусть выйдут коровы, меняя (свое место) в соответствии с законом,
-10.108.11	3	-	(Те, что) были спрятаны, когда (их) нашли Брихаспати,
-10.108.11	4	-	Сома, давильные камни и вдохновенные риши.
+10.108.11	2	Пусть выйдут коровы, меняя (свое место) в соответствии с законом,
+10.108.11	3	(Те, что) были спрятаны, когда (их) нашли Брихаспати,
+10.108.11	4	Сома, давильные камни и вдохновенные риши.
 10.109.01	1	Они обсуждали первыми преступление против брахмана:
 10.109.01	2	Безграничный океан, Матаришван,
 10.109.01	3	Крепко охватывающий жар, грозный, подкрепляющий;
@@ -37726,7 +37726,7 @@
 10.109.04	1	О ней говорили некогда боги
 10.109.04	2	(И) семеро риши, что уселись для аскезы:
 10.109.04	3	Страшна жена брахмана, приведенная (другим),
-10.109.04	4	-	Она вызывает беспорядок на высшем небе.
+10.109.04	4	Она вызывает беспорядок на высшем небе.
 10.109.05	1	Он живет как ученик брахмана, делая (многие) дела.
 10.109.05	2	Он становится одним из членов богов.
 10.109.05	3	Благодаря ему Брихаспати нашел жену,
